--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
 h1 {
-  background-color: skyblue;
-  color: lightyellow;
+  background-color: white;
+  color: red;
 }
 img {
-  width: 200px;
+  width: 28%;
   padding: 10px;
+}
+body {
+  font-size: 16px;
+  background-color: orange;
+  display: inline-block;
 }
